tests/fixtures/negative/potential-bugs/UnnecessaryNotNullCheck.kt
package style

fun example() {
    val x: String? = null
    if (x != null) {
        println(x)
    }
}
